<resources>
    <string name="app_name">Quiz</string>

    <!--App loaded texts-->
    <string name="text_start_quiz">Start Quiz</string>
    <string name="text_welcome">Welcome!</string>
    <string name="text_choose_category">Please, choose a category and start the quiz.</string>
    <string name="text_selected_category_high_score">High Score:&#160;</string>

    <!--Quiz categories-->
    <string-array name="string_array_categories">
        <item>categories</item>
        <item>Animals</item>
        <item>Geography</item>
        <item>History</item>
        <item>Literature</item>
        <item>Mathematics</item>
    </string-array>
    <string name="category_animals">Animals</string>
    <string name="category_geography">Geography</string>
    <string name="category_history">History</string>
    <string name="category_literature">Literature</string>
    <string name="category_mathematics">Mathematics</string>

    <!--Quiz texts-->
    <string name="text_timer_default">00:59</string>
    <string name="text_questions_counter_default">Question 1 of 10</string>
    <string name="text_questions_counter_prefix">Question &#160;</string>
    <string name="text_questions_counter_suffix">&#160; of &#160;</string>
    <string name="button_submit_answer">Submit</string>
    <string name="button_next_question">Next</string>
    <string name="desc_next_question_button">Next question</string>
    <string name="desc_prev_question_button">Previous question</string>
    <string name="toast_next_question_error">No more questions!</string>
    <string name="toast_prev_question_error">Can\'t go back!</string>

    <!--Quiz results-->
    <string name="label_category">Category:&#160;</string>
    <string name="label_average_difficulty">Difficulty (avg):&#160;</string>
    <string name="label_right_answers">Right Answers:&#160;</string>
    <string name="label_score">Score:&#160;</string>
    <string name="label_high_score">High Score:&#160;</string>
    <string name="button_check_answers">Check Answers</string>
    <string name="button_restart_quiz">Restart Quiz</string>
    <string name="button_change_category">Change Category</string>
    <string name="button_back_to_categories">Back to Categories</string>
</resources>