<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!--Quiz categories-->
    <Spinner
        android:id="@+id/spinner_categories"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/string_array_categories"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--Introductory text layout-->
    <include
        android:id="@+id/main_layout_intro"
        layout="@layout/layout_intro"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/button_start_quiz"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner_categories"
        tools:visibility="gone" />

    <!--Quiz layout-->
    <include
        android:id="@+id/main_layout_quiz"
        layout="@layout/layout_quiz"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/button_start_quiz"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner_categories"
        tools:visibility="invisible" />

    <!--Results layout-->
    <include
        android:id="@+id/main_layout_results"
        layout="@layout/layout_outro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner_categories"
        tools:visibility="visible" />

    <!--Start quiz button-->
    <Button
        android:id="@+id/button_start_quiz"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_start_quiz"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>